@@ -1,7 +1,5 @@
 package Evo.map.elements;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -15,7 +13,7 @@ public enum Orientation {
     WEST,
     NORTHWEST;
     private static final List<Orientation> VALUES =
-            Collections.unmodifiableList(Arrays.asList(values()));
+            List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
